[package]
name = "brokenfuse"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
fuser = {path = "../../tmp/fuser" }
libc = "0.2.174"
linux-meminfo = "0.1.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
