[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "brokenfuse"
version = "0.0.1"
authors = [
  { name="Vladislav Oleshko", email="vladislav.oleshko@gmail.com" },
]
description = "Broken fuse python package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dranikpg/brokenfuse"

[tool.setuptools.package-dir]
"brokenfuse"="pysrc"


[[tool.setuptools-rust.bins]]
target = "brokenfuse"
path = "Cargo.toml"
args = ["--release"]